Fixed header on mobile home page

--- a/site/src/styles/common/_site-header.scss
+++ b/site/src/styles/common/_site-header.scss
@@ -239,4 +239,14 @@
       width: 25px;
     }
   }
+
+
+  // Header on home page
+  // ----------------------------------------- //
+  .home {
+    .site-header {
+      position: static;
+      margin-bottom: 0;
+    }
+  }
 }
